hook up settings page submit button

--- a/corptax/templates/corptax/admin.html
+++ b/corptax/templates/corptax/admin.html
@@ -29,7 +29,7 @@
                     </tr>
                     {% endfor %}
                 </table>
-                <input id='btnSerialise' type="button" value="Submit" onclick="serializeForm()">
+                <input id='btnSerialise' type="submit" value="Submit" formmethod="POST">
             </div>
         </form>
     </div>
